--- a/src/Styles/Landingpage.css
+++ b/src/Styles/Landingpage.css
@@ -54,20 +54,66 @@ section.section-2 div.prev, section.section-2 div.prev2,
 section.section-4 div.prev,
 section.section-4 div.prev2 {
   position: absolute;
+  background-color: #6666ff;
+  color: white;
+  font-size: 2rem;
   height: 80%;
   width: 50%;
   left: 0;
   top: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+section.section-2 div.prev svg, section.section-2 div.prev2 svg,
+section.section-4 div.prev svg,
+section.section-4 div.prev2 svg {
+  color: white;
+  font-size: 3rem;
 }
 
 section.section-2 div.next, section.section-2 div.next2,
 section.section-4 div.next,
 section.section-4 div.next2 {
   position: absolute;
+  background-color: #6666ff;
+  color: white;
+  font-size: 2rem;
   height: 80%;
   width: 50%;
   left: 50%;
   top: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+section.section-2 div.next svg, section.section-2 div.next2 svg,
+section.section-4 div.next svg,
+section.section-4 div.next2 svg {
+  color: white;
+  font-size: 3rem;
 }
 
 @media only screen and (max-width: 390px) {
